--- a/canvas/quickstart.mdx
+++ b/canvas/quickstart.mdx
@@ -1,4 +1,72 @@
 ---
-title: Quickstart
-description: "Learn how to train LoRA models on the Remade platform"
+title: "Quickstart Guide"
+description: "Welcome to Remade Canvas! In just a few minutes, you'll create your first image and transform it into a dynamic video. Let's dive in.
+"
 ---
+
+## Your First Image Generation
+
+Let's start by generating a stunning image:
+
+1. **Click the generation icon** - Look for the stars icon in the left toolbar
+2. ** Write your prompt** - Enter a descriptive text prompt in the input field
+3. **Enhance your prompt (optional)** - Click the "Enhance" button to automatically improve your prompt with more detail and creative elements
+4. **Generate** - Click the generate button to create your image
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/quickstart1.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+## Create a Video
+
+Now let's transform your generated image into a dynamic video:
+
+1. **Select your image** - Click on the image you just generated
+2. **Set as reference** - Click the "Reference" button that appears
+3. **Choose "Use as start frame"** - This will use your image as the first frame of the video
+4. **Describe the scene** - Write a prompt that describes the video you intend to generate
+5. **Generate** - Create your video and watch your image come alive
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/quickstart2.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+## What's Next?
+
+Congratulations! You've just experienced the core Remade Canvas workflow. Here's what to explore next:
+
+<CardGroup cols={2}>
+  <Card title="Navigation Basics" icon="hand" href="/canvas/navigation-basics">
+    Master moving around your infinite canvas
+  </Card>
+
+{" "}
+
+<Card title="Ask Mode" icon="comments" href="/canvas/ask-mode">
+  Use AI to brainstorm and plan your projects
+</Card>
+
+{" "}
+
+<Card title="Image Editing" icon="paintbrush" href="/canvas/image-editing">
+  Edit and enhance your generated images
+</Card>
+
+  <Card title="Advanced Features" icon="magic" href="/canvas/gen-frames">
+    Explore Gen Frames and Remade Effects
+  </Card>
+</CardGroup>
