--- a/canvas/video-generation.mdx
+++ b/canvas/video-generation.mdx
@@ -10,7 +10,7 @@ To generate a video from a text prompt:
 1. **Access the generation toolbar** - Click on the generation icon (stars icon) in the left toolbar to make the generation toolbar appear.
 2. **Switch to Video mode** - Select the "Video" tab in the generation toolbar.
 3. **Write your prompt** - Enter a descriptive text prompt describing the video you want to create and select the desired apsect ratio and video model.
-4. **Enhance your prompt (optional)** - Click the "Enhance" button to automatically improve your prompt with more detail and creative elements.
+4. **Enhance your prompt** - Click the "Enhance" button to automatically improve your prompt with more detail and creative elements.
 5. **Generate** - Click the generate button to create your video.
 
 <Frame>
@@ -39,7 +39,7 @@ Transform static images into dynamic videos using existing images as starting or
    - **Add as reference** - Use the image as style/content guidance
    - **Use as start frame** - Begin the video with this image
    - **Use as end frame** - End the video with this image
-4. **Write your prompt (optional)** - Add a text description for the video motion or transformation
+4. **Write your prompt (optional)** - Add a text description for the video you want to create. Click "Enhance" to use AI to o automatically improve your prompt with more detail and creative elements (optional).
 5. **Generate** - Click the generate button to create your video
 
 <Frame>
