docs: remove introduction from Getting Started section and update quickstart guide for clarity and consistency

--- a/canvas/introduction.mdx
+++ b/canvas/introduction.mdx
@@ -1,9 +1,9 @@
 ---
 title: Introduction
-description: "Welcome to Remade Canvas - your AI-native workspace for creative workflows"
+description: "Welcome to Remade - your AI-native workspace for creative workflows"
 ---
 
-# Welcome to Remade Canvas
+# Welcome to the Remade Canvas
 
 Remade Canvas is your **interface to creative intelligence** - an AI-native workspace designed to help you produce extraordinary creative work. Whether you're a content creator, designer, marketer, or artist, Remade provides everything you need for your creative workflows in one unified platform.
 
