--- a/canvas/quickstart.mdx
+++ b/canvas/quickstart.mdx
@@ -9,7 +9,7 @@ description: "Welcome to Remade Canvas! In just a few minutes, you'll create you
 Let's start by generating a stunning image:
 
 1. **Click the generation icon** - Look for the stars icon in the left toolbar
-2. ** Write your prompt** - Enter a descriptive text prompt in the input field
+2. **Write your prompt** - Enter a descriptive text prompt in the input field
 3. **Enhance your prompt (optional)** - Click the "Enhance" button to automatically improve your prompt with more detail and creative elements
 4. **Generate** - Click the generate button to create your image
 
@@ -24,7 +24,7 @@ Let's start by generating a stunning image:
   />
 </Frame>
 
-## Create a Video
+## Your First Video Generation
 
 Now let's transform your generated image into a dynamic video:
 
@@ -56,17 +56,23 @@ Congratulations! You've just experienced the core Remade Canvas workflow. Here's
 
 {" "}
 
-<Card title="Ask Mode" icon="comments" href="/canvas/ask-mode">
-  Use AI to brainstorm and plan your projects
+{" "}
+
+<Card title="Image Generation" icon="image" href="/canvas/image-generation">
+  Learn how to create stunning images from text
 </Card>
 
 {" "}
 
-<Card title="Image Editing" icon="paintbrush" href="/canvas/image-editing">
-  Edit and enhance your generated images
+{" "}
+
+<Card title="Video Generation" icon="video" href="/canvas/video-generation">
+  Transform your images into dynamic videos
 </Card>
 
-  <Card title="Advanced Features" icon="magic" href="/canvas/gen-frames">
-    Explore Gen Frames and Remade Effects
+{" "}
+
+  <Card title="Image Editing" icon="paintbrush" href="/canvas/image-editing">
+    Edit and enhance your generated images
   </Card>
 </CardGroup>
