docs: add navigation basics section with detailed instructions on zooming and panning in Remade's infinite canvas

--- a/canvas/navigation-basics.mdx
+++ b/canvas/navigation-basics.mdx
@@ -1,3 +1,32 @@
 ---
 title:
 ---
+
+#Navigation Basics
+Remade uses an infinite canvas, which means you can add as much content within, and scroll both vertically and horizontally. Here's how to navigate around your canvas.
+
+## Zooming
+
+There two ways to zoom in and out on your canvas:
+
+- **Scroll with your mouse** - Use your mouse wheel to zoom in and out
+- **Pinch using your trackpad** - Use two fingers to pinch in/out on your trackpad
+
+## Panning
+
+To move across the canvas, known as panning:
+
+- If you're using a mouse, the easiest way is to use **middle click** (press down the scroll wheel) and drag.
+- Hold <kbd>Space</kbd> to temporarily activate the hand tool, then click, hold, and drag. While holding <kbd>Space</kbd>, your cursor will switch from select mode to pan mode as indicated by the hand cursor.
+- Select the hand tool at the top of the canvas. Then click, hold, and drag.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/panning.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
