docs: correct title formatting in navigation basics section for consistency

--- a/canvas/navigation-basics.mdx
+++ b/canvas/navigation-basics.mdx
@@ -1,8 +1,7 @@
 ---
-title:
+title: Navigation Basics
 ---
 
-#Navigation Basics
 Remade uses an infinite canvas, which means you can add as much content within, and scroll both vertically and horizontally. Here's how to navigate around your canvas.
 
 ## Zooming
